# quid

./: CMakeLists.txt
include/: animation.h  game.h  puzzle.h  sound.h
src/: animation.c  game.c  main.c  puzzle.c  sound.c
